# Project-Hermes

./: .env.example  .gitignore  Distributed task queue.py  Dockerfile  Flask API.py  Intelligent Parametric Tool Class.py  JMeter.py  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/config/: prometheus.yml
hermes-core/: setup.py
hermes-core/assertions/: __init__.py  engine.py
hermes-core/executor/: __init__.py  extractor.py  hooks.py  http_client.py  retry.py  runner.py
hermes-core/parametrize/: __init__.py  data_loader.py  functions.py  iterator.py  scope.py  template.py
hermes-core/scheduler/: cron_parser.py  scheduler.py
hermes-core/tracing/: __init__.py  context.py  propagation.py  trace_id.py
hermes-core/utils/: __init__.py  circuit_breaker.py  html_escape.py  rate_limiter.py
hermes-server/: Dockerfile  requirements.txt  seed.py  setup.py
hermes-server/app/: __init__.py  error_handlers.py  metrics.py  response.py
hermes-server/config/: config.py
hermes-server/middleware/: auth.py  permission.py  request_logger.py
hermes-server/models/: __init__.py  data_source.py  execution.py  notification.py  project.py  scheduled_task.py  test_case.py  user.py
hermes-server/services/: __init__.py  auth_service.py  dashboard_service.py  environment_service.py  exceptions.py  execution_service.py  notification_service.py  project_service.py  report_service.py  scheduled_task_service.py  test_case_service.py  test_suite_service.py  variable_service.py
hermes-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
hermes-web/src/: App.vue
hermes-worker/: .dockerignore  Dockerfile  celery_app.py  config.py  requirements.txt  setup.py
hermes-worker/tasks/: __init__.py  heartbeat.py  test_execution.py
tests/: conftest.py
tests/test_concurrency/: test_circuit_breaker_concurrent.py  test_rate_limiter_concurrent.py
tests/test_core/: conftest.py  test_hooks.py  (+13 more)
(+71 files in other folders)
